--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,6 @@ set(CMAKE_CXX_STANDARD 11)
 
 file(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
-add_executable(algprogram ${SRC} sortAlgTest.cpp)
+add_executable(algprogram ${SRC} sortAlgTest.cpp arryLeetCode.cpp)
 
 target_link_libraries(algprogram libgtestd.a)
